adguard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard
  namespace: adguard
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.1.241
  selector:
    app: adguard
  ports:
    - name: dns-udp
      port: 53
      targetPort: 53
      protocol: UDP

    - name: dns-tcp
      port: 53
      targetPort: 53
      protocol: TCP

    - name: web
      port: 80
      targetPort: 80
      protocol: TCP
